package camp.week3;

public class Frame extends Container{

    public Frame(String name) {
        super(name);
    }
}
