package camp.week3;

public class Label extends Widget{

    public Label(String name) {
        super(name);
    }
}
