package camp.week3;

public class WinForm extends Container {

    public WinForm(String name) {
        super(name);
    }
}
